k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authapp-backend
  labels:
    app: authapp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authapp-backend
  template:
    metadata:
      labels:
        app: authapp-backend
    spec:
      containers:
        - name: backend
          image: mart1nsmn/authapp-backend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: authapp-backend
spec:
  selector:
    app: authapp-backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
