k8s/03-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: authapp-frontend
spec:
  selector:
    app: authapp-frontend
  ports:
    - port: 80 # C'est le port public exposé sur Internet. Les utilisateurs taperont simplement l'IP sans avoir à rajouter ":8080" à la fin.
      targetPort: 8080 # Le trafic arrivant sur le port 80 public est redirigé vers le port 8080 sécurisé du conteneur.
  type: ClusterIP  # était LoadBalancer, l'Ingress prend maintenant ce rôle
