k8s/05-uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: authapp
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP # Accessible uniquement depuis l'intérieur du cluster
                  # L'accès externe se fait via l'Ingress (défini dans 04-ingress.yaml)
